--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="bar" style="width: 10%"></div>
                 </div>
                 <strong class="name">--</strong>
-            <div>
+            <div class="button">
                 <button class="attackButton">Atacar</button>
             </div>
         </div>
@@ -23,7 +23,7 @@
                 <div class="bar" style="width: 10%"></div>
                 </div>
                 <strong class="name">--</strong>
-            <div>
+            <div class="button">
                 <button class="attackButton">Atacar</button>
             </div>
         </div>
